# hamiltonian-models

./: .gitignore  README.md  pyproject.toml
demos/: models_lowdim.py  models_wave.py
src/hamiltonian_models/: base.py  dyn_sys.py  lowdim.py  vectors.py  vectors_numpy.py  wave.py
src/hamiltonian_models/integrators/: base.py  implicit_midpoint.py  stormer_verlet.py
