[project]
name = "hamiltonian-models"
version = "1.0.0"
authors = [
  { name="Patrick Buchfink" },
]
description = "A collection of Hamiltonian systems"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "BSD 2-Clause"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Linux",
]
dependencies = [
  "numpy==1.20.1",
  "matplotlib==3.5.2",
  "scipy==1.6.0",
  "pyevtk==1.5.0",
]

[project.urls]
Homepage = "https://github.com/pbuchfink/hamiltonian-models"

[build-system]
requires = ["setuptools>=47.0"]
build-backend = "setuptools.build_meta"
